== master

* Fix machine state predicate not calling superclass implementation if defined after machine definition
* Generate warnings when defining a helper method more than once
* Fix multiple machines not being able to target the same attribute if all possible states aren't defined in each
* Fix ActiveModel / DataMapper integrations not overriding StateMachine::Machine#after_initialize properly
* Improve documentation for overriding states and integration transactions

== 1.0.1 / 2011-05-30

* Add the ability to ignore method conflicts for helpers
* Generate warnings for any helper, not just state helpers, that has a conflicting method defined in the class
* Fix scopes in Sequel not working if the table name contains double underscores or is not a string/symbol
* Add full support for chaining state scopes within Sequel integrations
* Fix Rails 3.1 deprecation warnings for configuring engine locales [Stefan Penner]

== 1.0.0 / 2011-05-12

* Celebrate

== 0.10.4 / 2011-04-14

* Fix translations not being available under certain environments in Rails applications

== 0.10.3 / 2011-04-07

* Fix state initialization failing in ActiveRecord 3.0.2+ when using with_state scopes for the default scope

== 0.10.2 / 2011-03-31

* Use more integrated state initialization hooks for ActiveRecord, Mongoid, and Sequel
* Remove mass-assignment filtering usage in all ORM integrations
* Only support official Mongoid 2.0.0 release and up (no more RC support)
* Fix attributes getting initialized more than once if different state machines use the same attribute
* Only initialize states if state is blank and blank is not a valid state
* Fix instance / class helpers failing when used with certain libraries (such as Thin)

== 0.10.1 / 2011-03-22

* Fix classes with multiple state machines failing to initialize in ActiveRecord / Mongoid / Sequel integrations

== 0.10.0 / 2011-03-19

* Support callback terminators in MongoMapper 0.9.0+