@@ -294,13 +294,6 @@ module StateMachine
         def define_scope(name, scope)
           lambda {|model, values| model.query.merge(model.query(scope.call(values)))}
         end
-        
-        # ActiveModel's use of method_missing / respond_to for attribute methods
-        # breaks both ancestor lookups and defined?(super).  Need to special-case
-        # the existence of query attribute methods.
-        def owner_class_ancestor_has_method?(scope, method)
-          scope == :instance && method == "#{name}?" || super
-        end
     end
   end
 end
