@@ -273,6 +273,26 @@ module MongoidTest
     end
   end
   
+  class MachineWithConflictingStateNameTest < BaseTestCase
+    def setup
+      require 'stringio'
+      @original_stderr, $stderr = $stderr, StringIO.new
+      
+      @model = new_model
+      
+      @machine = StateMachine::Machine.new(@model)
+      @machine.state :state
+    end
+    
+    def test_should_output_warning
+      assert_match /^Instance method "state\?" is already defined in .*, use generic helper instead\.\n$/, $stderr.string
+    end
+    
+    def teardown
+      $stderr = @original_stderr
+    end
+  end
+  
   class MachineWithColumnStateAttributeTest < BaseTestCase
     def setup
       @model = new_model
